remove const back into function, add event listener to close form

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
         </div>
       </div>
 
-      <button type="submit" class="btn btn-primary mb-3">Submit</button> <br />
+      <button id="form-button" type="submit" class="btn btn-primary mb-3">Submit</button> <br />
       <a id="cancel-link" href="#">Cancel</a>
     </form>
 
